fixed white space

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -18,9 +18,10 @@ body {
 
 #root {
     width: 100%;
-    height: fit-content;
+    /* height: fit-content; */
+    min-height: 100vh;
     display: flex;
-    justify-content: center;
+    justify-content: flex;
 }
 
 a:link {
